# php-past

./: BUGS  CHANGES  CODING_STANDARDS  CREDITS  ChangeLog  FUNCTION_LIST.txt  INSTALL  INSTALL.DSO  INSTALL.REDHAT  LICENSE  Makefile  Makefile.in  README  README.QNX  README.WIN32  README.md  README.t1lib  TODO  WISHLIST-3.1  acconfig.h  aclocal.m4  alloc.c  alloc.h  alloca.c  apMakefile.tmpl  apache.dsp  apidoc.txt  build-defs.h.in  build-script  build.mk  buildcheck  buildconf  calendar.dsp  calendar.mak  common.c  common.h  config.h  config.h.in  config.w32.h  configuration-parser.tab.c  (+136 more)
benchmarks/: bench2  bench3  bench4  bench5  bench6  bench7
convertor/: Makefile  README  alloc.c  alloc.h  convertor.dsp  language-parser.output  language-parser.tab.c  language-parser.tab.h  language-parser.y  language-scanner.c  language-scanner.h  language-scanner.lex  main.c  main.h  makeparser.bat  php_alloc.h  token_cache.c  token_cache.h
convertor/doc/: appendixes.html  class.dir.html  config-cgi.html  config-security.html  configuration.html  control-structures.html  debugger-protocol.html  debugger.html  expressions.html  feature-connection-handling.html  feature-fileupload.html  feature-regexps.html  features.html  funcref.html  function.abs.html  function.acos.html  function.ada-afetch.html  function.ada-autocommit.html  function.ada-close.html  function.ada-commit.html  function.ada-connect.html  function.ada-exec.html  function.ada-fetchrow.html  function.ada-fieldname.html  function.ada-fieldnum.html  function.ada-fieldtype.html  function.ada-freeresult.html  function.ada-numfields.html  function.ada-numrows.html  function.ada-result.html  function.ada-resultall.html  function.ada-rollback.html  function.addslashes.html  function.apache-lookup-uri.html  function.apache-note.html  function.array-walk.html  function.array.html  function.arsort.html  function.asin.html  function.asort.html  (+955 more)
dbase/: HISTORY  Makefile  Makefile.in  README  dbase.mak  dbf.h  dbf_head.c  dbf_misc.c  dbf_ndx.c  dbf_ndx.h  dbfadd.c  dbfadd.mak  dbfcr.sh  dbfcreat.c  dbfcreate.mak  dbfdel.c  dbfdel.mak  dbfget.c  dbfget.mak  dbflst.c  dbflst.mak  dbfndx.c  dbfndx.mak  dbfpack.c  dbfpack.mak  dbfscan.sh  dbftst.c  dbftst.mak  make.win32  tmpl.c
dl/: Makefile.tmpl  README  phpdl.h  setup  win32vc5.mak
dl/calendar/: calendar.c  dow.c  (+6 more)
doc/: HOWTO.html  Makefile.in  README  appendixes.html  bookinfo.sgml  calling-user-functions.html  chapters.ent  checkdoc.in  class.dir.html  class.orbitenum.html  class.orbitobject.html  class.orbitstruct.html  common.dsl  config-apache.html  config-cgi.html  config-security.html  config-virtualhost.html  configuration.html  constants.html  control-structures.alternative-syntax.html  control-structures.break.html  control-structures.continue.html  control-structures.do.while.html  control-structures.else.html  control-structures.elseif.html  control-structures.for.html  control-structures.foreach.html  control-structures.html  control-structures.switch.html  control-structures.while.html  copyright.html  debugger-protocol.html  debugger.html  doc.html  docbook-filter  expressions.html  faq.phtml  feature-cookies.html  feature-error-handling.html  feature-fileupload.multiple.html  (+1736 more)
examples/: README  README.logging  clock.html  date.php3  demo_date.html  demo_dbm.html  demo_dir.html  demo_dns.html  demo_echo.html  demo_last.html  demo_main.html  demo_misc.html  demo_msql.html  demo_rand.html  demo_reg.html  demo_stat.html  demo_str.html  demo_synt.html  dir.php3  guestbook.html  log-db.php3  log-footer.php3  log-header.php3  log-test.php3  log.html  log.readme  mail.html  mlog.html  mlog_ref.inc  mlog_today.inc  mlog_top.inc  mlog_total.inc  mlog_yesterday.inc  mylog.html  mylog_ref.inc  mylog_today.inc  mylog_top.inc  mylog_total.inc  mylog_yesterday.inc  pgurl.readme  (+10 more)
functions/: COM.c  DList.h  adabasd.c  adabasd.h  apache.c  aspell.c  base64.c  base64.h  basic_functions.c  basic_functions.h  bcmath.c  browscap.c  cpdf.c  crypt.c  cyr_convert.c  cyr_convert.h  datetime.c  datetime.h  dav.c  db.c  db.h  dba.c  dba_cdb.c  dba_db2.c  dba_dbm.c  dba_gdbm.c  dba_ndbm.c  dbase.c  dbase.h  debug.h  dir.c  dl.c  dl.h  dlist.c  dns.c  dns.h  exec.c  exec.h  fdf.c  fhttpd.c  (+165 more)
pcrelib/: Makefile.in  dftables  pcrelib.dsp  testinput1  testoutput1
regex/: Makefile.in  cclass.h  cname.h  debug.c  engine.c  engine.ih  main.c  regcomp.c  regcomp.ih  regerror.c  regex.h  regex2.h  regexec.c  regfree.c  split.c  utils.h
regtests/: README  TEST  testphp.pl
scripts/: msqllog  mysqllog
serverapi/: cgi_sapi.c  isapi_sapi.c  nsapi_sapi.c  sapi.h
src/: Makefile.in  acc.c  adabasd.c  calc.c  cond.c  conf.c  crypt.c  date.c  db.c  dir.c  dns.c  echo.c  error.c  exec.c  file.c  filepro.c  fsock.c  gd.c  global.h  head.c  illustra.c  image.c  info.c  lex.c  local.c  log.c  mail.c  main.c  md5.c  md5.h  microtime.c  mime.c  mod_php.c  mod_php.h  mod_php.module.in  msql.c  mysql.c  odbc.c  oracle.c  oracle.h  (+25 more)
test/: README  template  testall  testmenu  testphp  testphp.awk
tests/: bench.phtml  cpdf.php3  crypt.phtml  crypt2.phtml  db.phtml  dba.php  dbase.phtml  display.php3  filestat.phtml  fortest  globaltest  globaltest.phtml  hyperwave.php3  implode-explode.phtml  informix.php3  informix_blb.php3  informix_blob.php3  informix_proc.php3  informix_ser.php3  library.phtml  link.phtml  log.phtml  mcrypt.php  microtime.phtml  msql.php3  mysql.php3  odbc-t1.php3  odbc-t2.php3  odbc-t3.php3  odbc-t4.php3  odbc-t5.php3  pack.phtml  pageinfo.phtml  pdf_clock.php3  pdf_hello.php3  sem.php  sock_io.php3  str_replace.php3  syslog.phtml  zlib.php3
win32/: apache.dsp  calendar.dsp  crypt.dsp  db2.dsp  dbase.dsp  dbm.dsp  filepro.dsp  ftp.dsp  gd.dsp  grp.h  hyperwave.dsp  imap4.dsp  imap_sendmail.c  imap_sendmail.h  interbase.dsp  ldap.dsp  msql.dsp  msql1.dsp  mssql.dsp  mysql.dsp  oci73.dsp  oci80.dsp  param.h  pcre.dsp  pdflib.dsp  php3.dsp  php_custom_build.dsp  pwd.c  pwd.h  readdir.c  sendmail.c  sendmail.h  snmp.dsp  solid23.dsp  time.c  wfile.c  winutil.c  wsyslog.c  xml.dsp  zlib.dsp
(+370 files in other folders)
